# python-project-50

./: .Makefile.swp  .gitignore  .pyproject.toml.swp  Makefile  README.md  pyproject.toml
gendiff/scripts/: .gendiff.py.swp  .generate_diff.py.swp  gendiff.py  generate_diff.py  start.py
tests/: test_gendiff.py
