[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Python project for comparison configuration files"
authors = ["zhdanovandrey4207 <zhdanovandrey4207@bk.ru>"]
readme = "README.md"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
generate_diff = "gendiff.scripts.generate_diff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
